Bug 506897 - Deleting a tag crashes the program.
Summary: Deleting a tag crashes the program.
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-11 02:25 UTC by jesse
Modified: 2025-07-13 07:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jesse 2025-07-11 02:25:28 UTC
SUMMARY
Deleting a tag cause the program to crash. 

STEPS TO REPRODUCE
1. open the Kmy book
2. go to the tags section 
3. select a tag to delete
4. press the delete button on the screen 

OBSERVED RESULT
Program crashes

EXPECTED RESULT
Program should not crash. 

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora
KDE Plasma Version: n/a gnome
KDE Frameworks Version: KDE Frameworks 
Version 5.115.0
Qt Version: Qt 
Version 5.15.13 (built against 5.15.12)

ADDITIONAL INFORMATION
KMY: Version 5.2.0-2cbd7a8 app image
Comment 1 jesse 2025-07-11 02:25:56 UTC
I want to add that the tag was unused.
Comment 2 Thomas Baumgart 2025-07-11 11:35:57 UTC
Git commit 4394fe1c446d0aa65d6a852cf9ce5761325c9108 by Thomas Baumgart.
Committed on 11/07/2025 at 11:34.
Pushed by tbaumgart into branch 'master'.

Prevent crash when deleting tag
FIXED-IN: 5.2.1

M  +39   -21   kmymoney/dialogs/ktagreassigndlg.cpp
M  +2    -2    kmymoney/dialogs/ktagreassigndlg.h

https://invent.kde.org/office/kmymoney/-/commit/4394fe1c446d0aa65d6a852cf9ce5761325c9108
Comment 3 Thomas Baumgart 2025-07-13 07:28:48 UTC
Git commit 579ba0a2b27cba821a4b6f7a86297e8d4c54562b by Thomas Baumgart.
Committed on 13/07/2025 at 06:32.
Pushed by tbaumgart into branch '5.2'.

Prevent crash when deleting tag
FIXED-IN: 5.2.1
(cherry picked from commit 4394fe1c446d0aa65d6a852cf9ce5761325c9108)

M  +39   -21   kmymoney/dialogs/ktagreassigndlg.cpp
M  +2    -2    kmymoney/dialogs/ktagreassigndlg.h

https://invent.kde.org/office/kmymoney/-/commit/579ba0a2b27cba821a4b6f7a86297e8d4c54562b