Prevent crash when deleting tag

BUG: 506897
FIXED-IN: 5.2.1