kmymoney/dialogs/ktagreassigndlg.cpp
@@ -23,50 +23,68 @@
 
 #include "ui_ktagreassigndlg.h"
 
-KTagReassignDlg::KTagReassignDlg(QWidget* parent)
-    : QDialog(parent)
-    , ui(new Ui::KTagReassignDlg)
-    , model(new IdFilter(this))
+class KTagReassignDlgPrivate
 {
-    auto checkValidInput = [&]() {
+public:
+    KTagReassignDlgPrivate(KTagReassignDlg* q)
+        : ui(new Ui::KTagReassignDlg)
+        , model(new IdFilter(q))
+    {
+    }
+
+    ~KTagReassignDlgPrivate()
+    {
+        delete ui;
+    }
+
+    void checkValidInput()
+    {
         const auto idx = model->index(ui->tagCombo->currentIndex(), 0);
         const auto validInput = (!idx.data(eMyMoney::Model::IdRole).toString().isEmpty() || ui->removeCheckBox->isChecked());
         ui->buttonBox->button(QDialogButtonBox::Ok)->setEnabled(validInput);
-    };
+    }
 
-    ui->setupUi(this);
+    Ui::KTagReassignDlg* ui;
+    QSortFilterProxyModel* model;
+};
 
-    model->setSourceModel(MyMoneyFile::instance()->tagsModel());
-    model->setSortLocaleAware(true);
-    ui->tagCombo->setModel(model);
+KTagReassignDlg::KTagReassignDlg(QWidget* parent)
+    : QDialog(parent)
+    , d(new KTagReassignDlgPrivate(this))
+{
+    d->ui->setupUi(this);
 
-    connect(ui->tagCombo, QOverload<int>::of(&QComboBox::currentIndexChanged), this, [&]() {
-        checkValidInput();
+    d->model->setSourceModel(MyMoneyFile::instance()->tagsModel());
+    d->model->setSortLocaleAware(true);
+    d->ui->tagCombo->setModel(d->model);
+
+    connect(d->ui->tagCombo, QOverload<int>::of(&QComboBox::currentIndexChanged), this, [&]() {
+        d->checkValidInput();
     });
-    connect(ui->removeCheckBox, &QCheckBox::toggled, this, [&]() {
-        checkValidInput();
+    connect(d->ui->removeCheckBox, &QCheckBox::toggled, this, [&]() {
+        d->checkValidInput();
     });
 
-    ui->buttonBox->button(QDialogButtonBox::Ok)->setEnabled(false);
+    d->ui->buttonBox->button(QDialogButtonBox::Ok)->setEnabled(false);
 }
 
 KTagReassignDlg::~KTagReassignDlg()
 {
-    delete ui;
+    delete d;
 }
 
 void KTagReassignDlg::setupFilter(const QList<QString>& tagslist)
 {
-    qobject_cast<IdFilter*>(model)->setFilterList(tagslist);
-    model->sort(0);
-    ui->tagCombo->setCurrentIndex(-1);
+    qobject_cast<IdFilter*>(d->model)->setFilterList(tagslist);
+    d->model->sort(0);
+    d->ui->tagCombo->setCurrentIndex(-1);
 }
 
 QString KTagReassignDlg::reassignTo() const
 {
-    if (ui->removeCheckBox->isChecked())
+    if (d->ui->removeCheckBox->isChecked())
         return {};
 
-    const auto idx = ui->tagCombo->model()->index(ui->tagCombo->currentIndex(), 0);
+    const auto idx = d->ui->tagCombo->model()->index(d->ui->tagCombo->currentIndex(), 0);
     return idx.data(eMyMoney::Model::IdRole).toString();
 }
